--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,10 +3,10 @@ name: Push Docker Image
 on:
   push:
     branches:
-      - master
+      - dev
   # Trigger rebuild in case of new runner version
-  schedule:
-    - cron: "19 9 * * *"
+  #schedule:
+  #  - cron: "19 9 * * *"
 
 env:
   RUNNER_VERSION: ""
